--- a/RepositoryPattern.EFSource/RepositoryPattern.EFSource.csproj
+++ b/RepositoryPattern.EFSource/RepositoryPattern.EFSource.csproj
@@ -53,11 +53,16 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolContext.cs" />
-    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepositoryPattern.Core\RepositoryPattern.Core.csproj">
+      <Project>{86ba04dd-c437-4ee2-b42e-c79fa99675fb}</Project>
+      <Name>RepositoryPattern.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
