--- a/RepositoryPattern.Repository/RepositoryPattern.Repository.csproj
+++ b/RepositoryPattern.Repository/RepositoryPattern.Repository.csproj
@@ -49,9 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContextTypes.cs" />
     <Compile Include="EFRepositoryBase.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="IStudentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryFactory.cs" />
+    <Compile Include="StudentEFRepository.cs" />
+    <Compile Include="StudentXMLRepository.cs" />
     <Compile Include="XMLRepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +67,14 @@
     <ProjectReference Include="..\RepositoryPattern.Core\RepositoryPattern.Core.csproj">
       <Project>{86ba04dd-c437-4ee2-b42e-c79fa99675fb}</Project>
       <Name>RepositoryPattern.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepositoryPattern.EFSource\RepositoryPattern.EFSource.csproj">
+      <Project>{c8235004-d4b9-4958-9894-1792bbdd09ec}</Project>
+      <Name>RepositoryPattern.EFSource</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepositoryPattern.XMLSource\RepositoryPattern.XMLSource.csproj">
+      <Project>{0e46c7e2-82d0-4836-8e98-01059dd9d47a}</Project>
+      <Name>RepositoryPattern.XMLSource</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
