--- a/RepositoryPattern.Console/App.config
+++ b/RepositoryPattern.Console/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="SchoolContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=H:\htfs\Rpsbase\RepositoryPattern\RepositoryPattern.Console\App_Data\School.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SchoolContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=E:\Blogprojeler\dotnet\reospttrn\RepositoryPattern.Console\App_Data\School.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
